# SoADesign

./: .gitignore  CMakeLists.txt  DUNETriggerData_8h_source.html  Doxyfile  README.md  SoADict_8h_source.html  Test_SoA.cc  annotated.html  classes.html  classsoa_1_1DUNETriggerData-members.html  classsoa_1_1DUNETriggerData.html  classsoa_1_1_d_u_n_e_trigger_data.html  classsoa_1_1myval-members.html  classsoa_1_1myval.html  classsoa_1_1soavalue-members.html  classsoa_1_1soavalue.html  common_8h_source.html  convert_tree_to_rntuple.cc  dir_7da809630a0bf7f0b43a9c245bff7d16.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  main.yml  md_README.html  memory_8h_source.html  pages.html  soa_8h_source.html  structsoa_1_1add__restrict.html  structsoa_1_1add__restrict_3_01T_00_01RestrictQualify_1_1Disabled_01_4-members.html  structsoa_1_1add__restrict_3_01T_00_01RestrictQualify_1_1Disabled_01_4.html  structsoa_1_1add__restrict_3_01T_00_01RestrictQualify_1_1Enabled_01_4-members.html  structsoa_1_1add__restrict_3_01T_00_01RestrictQualify_1_1Enabled_01_4.html  structsoa_1_1add__restrict_3_01_t_00_01_restrict_qualify_1_1_disabled_01_4.html  structsoa_1_1soaParametersImpl-members.html  structsoa_1_1soaParametersImpl.html  structsoa_1_1soaconstParametersImpl-members.html  structsoa_1_1soaconstParametersImpl.html  test_paddedSoA.cc  test_trigger_hdf5.cc  test_trigger_rntuple.cc  test_trigger_rntuple_arrSoa.cc  (+3 more)
.github/workflows/: main.yml
dict/: SoADict.h
docs/html/: _d_u_n_e_trigger_data_8h_source.html  _linkdef_8h_source.html  annotated.html  classes.html  classsoa_1_1_d_u_n_e_trigger_data-members.html  classsoa_1_1myval.html  classsoa_1_1soavalue-members.html  classsoa_1_1soavalue.html  files.html  index.html  memory_8h_source.html  soa_8h_source.html  structsoa_1_1add__restrict_3_01_t_00_01_restrict_qualify_1_1_disabled_01_4-members.html  structsoa_1_1soa_parameters_impl.html  structsoa_1_1soaconst_parameters_impl.html  val_8h_source.html
docs/html/search/: all_1.js  all_3.js  classes_2.js  searchdata.js
docs/latex/: _d_u_n_e_trigger_data_8h_source.tex  _linkdef_8h_source.tex  annotated.tex  classsoa_1_1_d_u_n_e_trigger_data.tex  classsoa_1_1soavalue.tex  common_8h_source.tex  files.tex  memory_8h_source.tex  refman.tex  soa_8h_source.tex  structsoa_1_1add__restrict.tex  structsoa_1_1add__restrict_3_01_t_00_01_restrict_qualify_1_1_enabled_01_4.tex  structsoa_1_1soa_parameters_impl.tex  val_8h_source.tex
doxygen/html/: classsoa_1_1_d_u_n_e_trigger_data.html  classsoa_1_1myval-members.html  common_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  structsoa_1_1add__restrict_3_01_t_00_01_restrict_qualify_1_1_enabled_01_4-members.html  structsoa_1_1add__restrict_3_01_t_00_01_restrict_qualify_1_1_enabled_01_4.html  structsoa_1_1soaconst_parameters_impl-members.html
html/: _d_u_n_e_trigger_data_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  structsoa_1_1add__restrict.html  structsoa_1_1soa_parameters_impl-members.html
html/search/: classes_0.js
include/: ASoA.h  DUNETriggerData.cxx  DUNETriggerData.h  DUNETriggerData_cxx  DUNETriggerMetadata.h  common.h  dunedatamodel.xml  memory.h  padded_SoA.h  padded_SoAView.h  padded_SoA_layout.h  soa.h  val.h
latex/: _d_u_n_e_trigger_data_8h_source.tex  classsoa_1_1_d_u_n_e_trigger_data.tex  classsoa_1_1myval.tex  files.tex  refman.tex  structsoa_1_1add__restrict_3_01_t_00_01_restrict_qualify_1_1_disabled_01_4.tex  structsoa_1_1soaconst_parameters_impl.tex
search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  pages_0.js  searchdata.js
